[package]
name = "nltk-test"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust-bert = "*"
quick-xml = "*"
#tch = "*"
nnsplit = { version="*", features=["tract-backend"]}
walkdir = "*"
itertools = "*"
rayon = "*"
srx = { version = "0.1.2, features = ["from_xml"] }
