[package]
name = "nltk-test"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "*", features = ["escape-html"], path = "../quick-xml" }
walkdir = "*"
itertools = "*"
rayon = "*"
srx = { version = "*", features = ["from_xml"], path = "../srx" }
